Compilation_Racket_Mips/piton/tests/errors/funcdef_in_while.py
while False:
    def a():
        print_int(1)
